[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/ui/book/portraits/alchemist.png" type="Texture" id=1]
[ext_resource path="res://assets/images/effects/glow.png" type="Texture" id=2]
[ext_resource path="res://game/pre-run/CharacterButton.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.0392157, 0.152941, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150
corner_detail = 20
anti_aliasing_size = 5.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150
corner_detail = 20
anti_aliasing_size = 5.0

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.294118, 0.294118, 0.294118, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150
corner_detail = 20
anti_aliasing_size = 5.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150
corner_detail = 20
anti_aliasing_size = 5.0

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.141935, 0.845161, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 5
emission_ring_radius = 150.0
emission_ring_inner_radius = 150.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
color_ramp = SubResource( 7 )
hue_variation = 0.9

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "error"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Button" type="Button"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
focus_mode = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = true
icon = ExtResource( 1 )
align = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
material = SubResource( 5 )
position = Vector2( 150, 150 )
emitting = false
amount = 500
lifetime = 0.5
speed_scale = 5.0
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/error = SubResource( 11 )

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
[connection signal="toggled" from="." to="." method="_on_Button_toggled"]
